# lab_3

./: CMakeLists.txt  README.md
include/: array.h  figure.h  octagon.h  square.h  triangle.h
src/: array.cpp  main.cpp  octagon.cpp  square.cpp  triangle.cpp
tests/: test_array.cpp  test_figures.cpp
